replaced "new Double(d)" with "Double.valueOf(d)" and Integer analogon